# web_rtccam

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  memo.md
Docker/signaling/: Dockerfile
Docker/wasm/: Dockerfile
Docker/webrtc/: Dockerfile  Dockerfile.dev
nginx/: nginx.conf
signaling/: Cargo.toml
signaling/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
webrtc/: .dockerignore  .env.example  eslint.config.mjs  next.config.ts  package-lock.json  package.json
webrtc/src/app/: page.tsx
webrtc/src/app/webrtc/: page.tsx
webrtc/src/components/: WebRTC.tsx
webrtc/src/components/VideoChat/: ConnectionControls.tsx  ConnectionStatus.tsx  VideoDisplay.tsx  index.tsx
webrtc/src/hooks/: index.ts  useMediaStream.ts  useSignaling.ts  useWebRTC.ts
webrtc/src/lib/: peer.ts  wsClient.ts
webrtc/src/types/: index.ts  signaling.ts  webrtc.ts
webrtc/src/utils/: webrtc-constants.ts  webrtc-helpers.ts
webrtc/src/wasm/: package.json  web_rtccam.d.ts  web_rtccam.js  web_rtccam_bg.wasm  web_rtccam_bg.wasm.d.ts
